fix(#221): improve title spacing in reduced header

--- a/src/app/components/Header/Header.scss
+++ b/src/app/components/Header/Header.scss
@@ -27,7 +27,7 @@
     }
 
     &-journal {
-      min-height: 50px;
+      min-height: 60px;
       display: flex;
       justify-content: space-between;
 
@@ -47,7 +47,7 @@
         width: 100%;
         background: var(--primary);
         color: var(--primary-text);
-        padding: 10px;
+        padding: 12px 10px;
         z-index: 10;
         min-width: 0;
         display: flex;
